force-app/main/default/objects/copado__Promoted_User_Story__c/copado__Promoted_User_Story__c.object-meta.xml
<CustomObject>
    <label>Promoted User Story</label>
    <nameField>
        <label>Promoted User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promoted User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>