force-app/main/default/objects/copado__Promoted_User_Story__c/fields/copado__Promotion__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion__c</fullName>
    <label>Promotion</label>
    <referenceTo>copado__Promotion__c</referenceTo>
    <relationshipLabel>Promoted User Stories</relationshipLabel>
    <relationshipName>Promoted_User_Stories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>