force-app/main/default/objects/copado__Promoted_User_Story__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <description>The status Outdated invalidates that this user story got promoted. The user story will be available again for automated promotions and back promotions if applicable.</description>
    <label>Active / Outdated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Outdated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>