force-app/main/default/objects/copado__Promoted_User_Story__c/fields/copado__User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado__User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>User Story Promotions</relationshipLabel>
    <relationshipName>Promoted_User_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>